<resources>
    <string name="app_name">Meu Imc</string>
    <string name="title_btn_salvar_alterar">Salvar</string>
    <string name="title_btn_limpar">Limpar</string>
    <string name="title_btn_imc">Imc</string>
    <string name="title_telaPrincipal">Menu principal</string>
    <string name="title_telaCadastrarPessoa">Cadastrar pessoa</string>
    <string name="title_telaListarPessoa">Listagem de pessoas</string>
    <string name="txt_btnSalvarAlterarContato">Salvar</string>
    <string name="hint_nome">Digite o seu nome</string>
    <string name="hint_dataNascimento">Selecione sua data de nascimento</string>
    <string name="hint_altura">Informe a sua altura em centímetros</string>
    <string name="hint_peso">Informe o seu peso</string>
</resources>
