<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome"
                android:inputType="text"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear_layout_data_nasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_layout_nome"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp">

            <ImageButton
                android:id="@+id/img_button_data_nascimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_calendar1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_layout_dataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_dataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_dataNascimento"
                    android:inputType="date"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_data_nasc"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_altura"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_layout_altura"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_peso"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/txt_layout_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_layout_peso"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resultado:"
                android:textSize="14sp" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_imc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_layout_resultado"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_imc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="@string/title_btn_imc"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_salvar_alterar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/title_btn_salvar_alterar"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_limpar_campos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_btn_limpar"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
